Update 'yhku40g56-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-2788c4a0e4.n9s3.p3.openshiftapps.com/rhtap/rhtap-qe:c03f64970992c74b1a3f08fa8f53eff3f5336b4c@sha256:5e27883fde52cb7e6caa0d49843bcf5cf4a4f8f04318f725234df28704177bfc

--- a/components/yhku40g56-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/yhku40g56-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: yhku40g56-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-2788c4a0e4.n9s3.p3.openshiftapps.com/rhtap/rhtap-qe:c03f64970992c74b1a3f08fa8f53eff3f5336b4c@sha256:5e27883fde52cb7e6caa0d49843bcf5cf4a4f8f04318f725234df28704177bfc
+          name: container-image
